# vsomeip-ros-bridge-test

./: Dockerfile  Dockerfile.client  Dockerfile.server  README.md  client_exe.sh  colcon.sh  end_times_ROS2.txt  end_times_SOMEIP.txt  server_exe.sh  start_times_ROS2.txt  start_times_SOMEIP.txt  start_times_SOMEIP_1024byte.csv  vsomeip.json
config/: init-client.sh  init-server.sh  vsomeip-client.json  vsomeip-server.json
src/gnss-bridge/: CMakeLists.txt
src/gnss-bridge/src/: abstract_someip_client.h  main.cpp  someip_publisher.h
src/gnss-listener/: CMakeLists.txt
src/gnss-listener/src/: main.cpp
src/gnss-provider/: CMakeLists.txt  package.xml
src/gnss-provider/src/: gnss_someip.h  gpsd_client.h  main.cpp
src/gnss-someip-lib/: CMakeLists.txt
src/gnss-someip-lib/src/fidl/: gnss.fidl  types.fidl
src/gnss-someip-lib/src/types/: conversion.h
